# FORTIS

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  ORBIT_SIM_FIX_CONTEXT.md  README.md  STATE.md  SUMMARY.md  inverse_kinetmatic_solver.py  pyproject.toml  stack
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
analysis/: orbit_analysis.md  pivot_analysis.md  skid_steer_rejection.md  torque_analysis.md  xdrive_analysis.md
control/: README.md
control/comms/: ekf_test.py  odrive_s1.py  test_xdrive_kinematics.py
control/fortis_comms/: README.md  ekf.py  motor_base.py  odrive_s1.py  xdrive_kinematics.py
control/fortis_comms/cfgs/: ekf_params.json
docker/: Dockerfile.dev  Dockerfile.dev-gpu  README.md  docker-compose.gpu.yml  docker-compose.yml
docs/: CLEANUP_AUDIT.md  FORTIS_Phase2_Prompt.md
docs/adr/: 0001-dual-container-strategy.md
firmware/teensy/: HANDOFF.md  PROTOCOL.md  main.ino
legacy/: README.md
legacy/deprecated_arm_action/: move_to_pose_action_server.py
legacy/deprecated_motor_stack/: odrive_s1.py
optimizer/results/phase1/: floor_measurements.json  mesh_info.json  parameter_sensitivity.json  phase1_final_report.json  phase1b_comprehensive.json  phase1b_maneuver.json  phase1b_skidsteer_vehicle.json  recommended_configs.json  skid_steer_isaac.json  stability_analysis.json  stability_reach_constrained.json
optimizer/results/phase2/: step_sweep.json
sim/: README.md
sim/analysis/: skid_steer_rejection.md
sim/isaac/skid_steer_design/: ANALYSIS.md  step_sweep.py
sim/isaac/xdrive/: CHANGELOG.md
simulation/isaac/: fortis_config.py  inspect_bounds.py  inspect_scene.py
simulation/isaac/phase1/: phase1a_setup_scene.py  phase1b_chassis_sweep.py  phase1b_maneuver.py  phase1b_vehicle_api.py
simulation/isaac/phase2/: build_robot.py  fortis_robot.urdf  fortis_robot.usd  generate_report.py  manual_drive.py  reactor_phase2.usd  run_best_turn.py  setup_phase2_scene.py  step_sweep.py  test_arm_stability.py  test_driving.py  test_rotation.py  test_scene.py  turn_calculator.py
simulation/isaac/scenes/: reactor.usd  reactor_floor.usd
simulation/isaac/skid_steer_rejection/: phase2_config.py  step_sweep.py
simulation/isaac/xdrive/: CHANGELOG.md  R0_ENTRY_PLAN.md  XDRIVE_SIM_SUMMARY.md  clearance_sweep.py  measure_r0_port.py  orbit_torque.py  sim_config.py  torque_sweep.py  xdrive_belly_rollers.py  xdrive_o3dyn.py  xdrive_r0_entry_v2.py  xdrive_r0_rollers.py  xdrive_reactor.py  xdrive_reactor_v2.py  xdrive_realwheel.py
src/fortis_arm/: README.md  package.xml  setup.cfg  setup.py
src/fortis_arm/fortis_arm/: arm_controller_node.py
src/fortis_arm/test/: conftest.py  test_bringup.py  test_pep257.py  test_state_gating.py
src/fortis_bringup/: README.md  package.xml  setup.cfg  setup.py
src/fortis_bringup/config/: bringup_params.yaml
src/fortis_bringup/launch/: bringup.launch.py  sim.launch.py  teleop.launch.py
src/fortis_comms/: README.md  package.xml  setup.cfg  setup.py
src/fortis_comms/fortis_comms/: ekf.py  motor_base.py  odrive_s1.py  xdrive_kinematics.py
src/fortis_comms/fortis_comms/cfgs/: ekf_params.json
src/fortis_comms/test/: test_ekf.py  test_imports.py  test_xdrive_kinematics.py
src/fortis_description/: CMakeLists.txt  README.md  package.xml
src/fortis_description/launch/: display.launch.py  foxglove.launch.py
src/fortis_description/meshes/: PLACEHOLDER.md
src/fortis_description/rviz/: fortis.rviz
src/fortis_description/urdf/: TODO.md  fortis_arm.urdf.xacro  fortis_chassis.urdf.xacro  fortis_constants.xacro  fortis_inertia.xacro  fortis_materials.xacro  fortis_robot.urdf.xacro
src/fortis_drive/: README.md  package.xml  setup.cfg  setup.py
src/fortis_drive/fortis_drive/: drive_node.py
src/fortis_drive/test/: conftest.py  test_drive_node.py
src/fortis_integration_tests/: README.md  package.xml  setup.cfg  setup.py
src/fortis_integration_tests/test/: conftest.py  test_bringup_launch.py  test_flake8.py  test_safety_arm_integration.py  test_safety_drive_integration.py
src/fortis_msgs/: CMakeLists.txt  README.md  package.xml
src/fortis_msgs/action/: MoveToPose.action
src/fortis_msgs/msg/: ChassisCamClick.msg  GraspCandidate.msg  MissionState.msg  WheelVelocities.msg
src/fortis_safety/: README.md  package.xml  setup.cfg  setup.py
src/fortis_safety/fortis_safety/: event_console.py  mission_state_machine.py  mission_state_node.py
src/fortis_safety/test/: test_mission_state_machine.py
tools/: mock_teensy.py
tools/stack/: README.md
tools/stack/tests/: README.md  run_tests.sh
tools/urdf_cleanup/: README.md  requirements.txt
tools/urdf_cleanup/configs/: fortis_chassis_mapping.yaml
tools/urdf_cleanup/tests/: conftest.py  test_end_to_end.py  test_generators.py  test_link_filter.py  test_mesh_renamer.py  test_parser.py  test_renamer.py  test_ros2_control.py  test_topology_fixer.py
tools/urdf_cleanup/urdf_cleanup/: __init__.py  __main__.py  launch_generator.py  link_filter.py  main.py  mesh_renamer.py  parser.py  renamer.py  ros2_control.py  rviz_generator.py  (+1 more)
(+214 files in other folders)
