<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fortis_arm</name>
  <version>0.0.0</version>
  <description>Arm controller seam for FORTIS, gated by mission state. Kinematics deferred -- this package is the contract scaffold.</description>
  <maintainer email="nikhilthankasala@gmail.com">Nikhil Thankasala</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>fortis_msgs</depend>
  <depend>fortis_comms</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
