<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fortis_description</name>
  <version>0.0.0</version>
  <description>Robot description package for FORTIS. URDF, meshes, RViz config, and description launch files. Empty scaffold; real URDF blocked on OnShape export.</description>
  <maintainer email="nikhilthankasala@gmail.com">Nikhil Thankasala</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
